--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ math1==1.0
 mysql-connector-python==8.0.19
 openpyxl==3.0.3
 pycparser==2.20
+psycopg2==2.4.4
 six==1.14.0
 SQLAlchemy==1.3.15
 visitor==0.1.3
